--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,8 @@
 @use "./base.scss";
 
-// put your custom CSS here!
+img[alt*="top"] {
+    vertical-align: top;
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+}
